# gemma_agent

./: .clineignore  .clinerules  .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT_PASTE.md  CHATGPT_PASTE.ru.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_NEWS_HARDENING.md  Makefile  PUBLIC_BUILD_RU.md  README.md  README.public.md  README.ru.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SELF_PROGRAMMING.md  api.py  codeql-workspace.yml  docker-compose.yml  docker-stack.yml  llms.txt  main.py  openrouter_activity_2026-06-14(1).csv  pyproject.toml  pytest.ini  requirements-agent.txt  requirements-dev.txt  requirements.txt  setup.cfg  test_modules.py  verify_structure.py  verify_structure_final.py
.cursor/: README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.zed/: settings.json
config/: agent_telegram.env.example  env_parity_keys.txt  ephemeral_lessons.example.json  heuristic_fixes.json  heuristic_shortcuts.json  heuristic_shortcuts.local.json.example  metrics_period_registry.json  modules_catalog.json  operator_rules.example.json  power_agent.env.fragment  privacy_blocklist.local.example.txt  repo_links.json  safety.yml  system_directive_addon_v2.example.txt  system_directive_addon_v3.example.txt  token_efficiency.yml
core/: __init__.py  access_gate.py  admin_autonomy.py  admin_bug_report.py  admin_bug_runner.py  admin_kv_state_view.py  admin_mce_status_view.py  admin_module.py  admin_ops_metrics.py  admin_ops_notify.py  admin_reputation_view.py  admin_route_risk_view.py  admin_self_status.py  admin_zip_copy.py  affect_state.py  agent_self_tools.py  agent_test_validators.py  answer_quality.py  anti_echo_guard.py  api_auth.py  api_ops.py  api_rate_limit.py  api_request_limits.py  api_state.py  arithmetic_tool_module.py  article_thread_followup.py  async_spawn.py  auto_rollback.py  autonomic_fatigue.py  autonomy_module.py  autopilot_cycle.py  autopilot_mode.py  autotune.py  batch_continuation.py  batch_processor.py  behavior_engine.py  behavior_store.py  books_rag.py  boot_timeline.py  brain_own_turn.py  (+333 more)
docs/: ACCEPTANCE_CRITERIA.md  AGENT_LOOP.md  ARCHITECTURE.md  CACHE_LATENCY_METRICS.md  CI.md  DEPLOY.md  index.md  (+26 more)
(+893 files in other folders)
