[project]
name = "gemma-agent"
version = "3.4.0"
description = "Telegram assistant with OpenRouter orchestration, memory, and plugins (project name gemma_agent; not Google Gemma runtime)."
keywords = ["telegram", "openrouter", "orchestrator", "ai-assistant"]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["core", "modules", "scripts", "tests", "api.py", "main.py"]

# CI: syntax errors only (E9). Full style lint: ruff check --select E,F locally
[tool.ruff.lint]
select = ["E9"]

# Editor (Zed / basedpyright): venv at ./venv, imports from repo root (core.*)
[tool.basedpyright]
include = ["core", "modules", "scripts", "tests", "api.py", "main.py"]
exclude = ["**/venv", "**/.venv", "**/__pycache__", "**/node_modules"]
venvPath = "."
venv = "venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
extraPaths = ["."]
